[gd_scene load_steps=6 format=3 uid="uid://dtn034h82ukdg"]

[ext_resource type="Script" path="res://VFX/LaserBeam2D.gd" id="1_jhod1"]
[ext_resource type="Texture2D" uid="uid://rfutgygoh3q8" path="res://Shared/bullets.png" id="2_6pc7l"]

[sub_resource type="Gradient" id="Gradient_odpk1"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.363636, 0.735294)
colors = PackedColorArray(0.957031, 0.996094, 0.90625, 1, 0.996094, 0.757813, 0.628906, 1, 0.996094, 0.320313, 0.464844, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_bvghh"]
gradient = SubResource("Gradient_odpk1")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_enaix"]
emission_shape = 3
emission_box_extents = Vector3(0, 1, 1)
particle_flag_disable_z = true
direction = Vector3(-1, 0, 0)
spread = 60.14
gravity = Vector3(0, 0, 0)
initial_velocity_min = 20.0
initial_velocity_max = 40.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
linear_accel_max = 100.0
damping_max = 13.084
color_ramp = SubResource("GradientTexture1D_bvghh")

[node name="LaserBeam2D" type="RayCast2D"]
script = ExtResource("1_jhod1")

[node name="LaserMuzzle" type="Sprite2D" parent="."]
texture = ExtResource("2_6pc7l")
region_enabled = true
region_rect = Rect2(0.5, 31.5, 16, 16)

[node name="LaserBeam" type="Sprite2D" parent="."]
position = Vector2(1.5, 0)
scale = Vector2(13, 1)
texture = ExtResource("2_6pc7l")
offset = Vector2(0.5, -0.5)
region_enabled = true
region_rect = Rect2(64, 48, 1, 16)

[node name="BeamParticles" type="GPUParticles2D" parent="."]
position = Vector2(14.5, 0)
amount = 10
process_material = SubResource("ParticleProcessMaterial_enaix")
lifetime = 0.4
trail_enabled = true
trail_lifetime = 0.1
